...
    return Scaffold(
        backgroundColor: Colors.grey[300],
        appBar: AppBar(
          // Sign out button
          actions: [
            IconButton(
                key: Key('signout_button'),
                onPressed: () {
                  Navigator.push(context,
                      MaterialPageRoute(builder: (context) => AuthPage()));
                  signUserOut();
                },
                icon: Icon(Icons.logout)),
...
